trunk/Archive2/39/b9ac2bf97b3b93/output
main.cpp: In function 'int main()':
main.cpp:19:36: error: call of overloaded 'get(NULL)' is ambiguous
     std::cout << "asd " << get(NULL) << std::endl;
                                    ^
main.cpp:19:36: note: candidates are:
main.cpp:6:5: note: int get(char*)
 int get(char* a)
     ^
main.cpp:11:5: note: int get(int)
 int get(int)
     ^
